--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
+    "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.2",
     "file-upload": "^0.0.0",
     "ioredis": "^5.8.2",
